MFC r297520: zfs receive: -u can be ignored sometimes

PR:		204705

Former-commit-id: 22884e76b5ca6622c592ca17f73470a8167512ea